@@ -139,9 +139,10 @@ public class NativeProtocolTest extends TestBaseImpl
             i.runOnInstance((IIsolatedExecutor.SerializableRunnable) () -> StorageService.instance.startNativeTransport());
             assertTrue(i.callOnInstance((IIsolatedExecutor.SerializableCallable<Boolean>) () -> StorageService.instance.isRpcReady(FBUtilities.getBroadcastAddress())));
 
-            // by calling e.g. nodetool disablebinary, rpc will be set to false again
+            // by calling e.g. nodetool disablebinary, rpc will NOT be set to false again
+            // please read CASSANDRA-18935 for in-depth explanation why it is so
             i.runOnInstance((IIsolatedExecutor.SerializableRunnable) () -> StorageService.instance.stopNativeTransport());
-            assertFalse(i.callOnInstance((IIsolatedExecutor.SerializableCallable<Boolean>) () -> StorageService.instance.isRpcReady(FBUtilities.getBroadcastAddress())));
+            assertTrue(i.callOnInstance((IIsolatedExecutor.SerializableCallable<Boolean>) () -> StorageService.instance.isRpcReady(FBUtilities.getBroadcastAddress())));
         }
     }
 }
